# BlenderRobotDesigner

./: .gitignore  .gitreview  README.html  README.md  README.rst  __init__.py  about.html  add_readme.html  armatures.py  bones.py  collada.py  controllers.py  files.py  fix.py  genindex.html  index.html  installer.blend  installer.py  main.py  markers.py  meshes.py  mmm.py  mmm.py~  objects.inv  physics.py  planned.html  properties.py  properties.py~  py-modindex.html  readme.html  robotdesigner_installer.blend  search.html  searchindex.js  simox.py
_modules/: index.html  logging.html  robot_designer_plugin.html
_sources/: README.rst.txt  index.txt
apidoc/: modules.html  robot_designer_plugin.core.conditions.html  robot_designer_plugin.core.config.html  robot_designer_plugin.core.gui.html  robot_designer_plugin.core.html  robot_designer_plugin.core.logfile.html  robot_designer_plugin.core.operators.html  robot_designer_plugin.core.pluginmanager.html  robot_designer_plugin.core.property.html  robot_designer_plugin.core.resources.html  robot_designer_plugin.export.collada15.collada.html  robot_designer_plugin.export.collada15.file.html  robot_designer_plugin.export.collada15.fix.html  robot_designer_plugin.export.collada15.html  robot_designer_plugin.export.html  robot_designer_plugin.html  (+42 more)
robot_designer_plugin/resources/robot_name_description/: CMakeLists.txt  package.xml
robot_designer_plugin/resources/robot_name_description/launch/: robot_name.launch  robot_name_manual_angles.launch
robot_designer_plugin/resources/robot_name_description/rviz/: robot_name.rviz
(+656 files in other folders)
