<?xml version="1.0"?>
<package>
  <name>$robot_name$_description</name>
  <version>1.0.0</version>
  <description>This package contains the description (mechanical, kinematic, visual, etc.) of 
               $robot_name$, including .dae models for a realistic looking robot.</description>


  <author email="na@na.eu">N/A</author>
  <maintainer email="na@na.eu">N/A</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/$robot_name$_description</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

</package>
